fixed css ; css validation showed "line 95 Parse Error text-align: center;"

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,9 +90,7 @@ body {
   position: relative;
   max-width: 600px;
   margin: auto;
-}
-
-.slideshow-container text-align: center; /* Center the slideshow */
+  text-align: center; /* Center the slideshow */
 }
 
 .slide {
